# sokoban.c

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  mc.yaml
.github/workflows/: ci.yaml
cli/: CMakeLists.txt
cli/src/: main.c
core/: CMakeLists.txt
core/include/sokoban/: Game.h  GameUtil.h  Movement.h  Tile.h  World.h
core/src/: Game.c  GameUtil.c  Movement.c  Tile.c  World.c
defaults/: CMakeLists.txt
